11 April 2007: Wouter
	- parse work - dname packet parse, msgparse, querysection parse,
	  start of sectionparse.
10 April 2007: Wouter
	- Improved alignment of reply_info packet, nice for 32 and 64 bit.
	- Put RRset counts in reply_info, because the number of RRs can change
	  due to RRset updates.
	- import of region-allocator code from nsd.
	- set alloc special type to ub_packed_rrset_key.
	  Uses lruhash entry overflow chain next pointer in alloc cache.
	- doxygen documentation for region-allocator.
	- setup for parse scratch data.

5 April 2007: Wouter
	- discussed packed rrset with Jelte.

4 April 2007: Wouter
	- moved to version 0.3.
	- added util/data/dname.c
	- layout of memory for rrsets.

3 April 2007: Wouter
	- detect sign of msghdr.msg_iovlen so that the cast to that type
	  in netevent (which is there to please lint) can be correct.
	  The type on several OSes ranges from int, int32, uint32, size_t.
	  Detects unsigned or signed using math trick.
	- constants for DNS flags. 
	- compilation without locks fixup.
	- removed include of unportable header from lookup3.c.
	- more portable use of struct msghdr.
	- casts for printf warning portability.
	- tweaks to tests to port them to the testbed.
	- 0.2 tag created.

2 April 2007: Wouter
	- check sizes of udp received messages, not too short.
	- review changes. Some memmoves can be memcpys: 4byte aligned.
	  set id correctly on cached answers. 
	- review changes msgreply.c, memleak on error condition. AA flag
	  clear on cached reply. Lowercase queries on hashing.
	  unit test on lowercasing. Test AA bit not set on cached reply.
	  Note that no TTLs are managed.

29 March 2007: Wouter
	- writev or sendmsg used when answering from cache.
	  This avoids a copy of the data.
	- do not do useless byteswap on query id. Store reply flags in uint16
	  for easier access (and no repeated byteswapping).
	- reviewed code.
	- configure detects and config.h includes sys/uio.h for writev decl.

28 March 2007: Wouter