@@ -1,6 +1,10 @@
+12 April 2007: Wouter
+	- dname compare routine that preserves case, with unit tests.
+	
 11 April 2007: Wouter
 	- parse work - dname packet parse, msgparse, querysection parse,
 	  start of sectionparse.
+
 10 April 2007: Wouter
 	- Improved alignment of reply_info packet, nice for 32 and 64 bit.
 	- Put RRset counts in reply_info, because the number of RRs can change
